Add JS file with addhouse logic

--- a/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
@@ -25,11 +25,11 @@
     <form class="ui form">
         <div class="field">
             <label>Address</label>
-            <input type="text" name="address" placeholder="Address">
+            <input id="address" type="text" name="address" placeholder="Address">
         </div>
         <div class="field">
             <label>Type</label>
-            <select class="ui fluid dropdown">
+            <select id="type" class="ui fluid dropdown">
                 <option value="">Type</option>
                 <option value="AP">Apartment</option>
                 <option value="HS">House</option>
@@ -38,7 +38,7 @@
 
         <div class="field">
             <label>Rooms</label>
-            <select class="ui fluid dropdown">
+            <select id="rooms" class="ui fluid dropdown">
                 <option value="">Rooms</option>
                 <option value="T0">T0</option>
                 <option value="T1">T1</option>
@@ -50,7 +50,7 @@
         </div>
         <div class="field">
             <label>Budget €</label>
-            <input type="text" name="budget" placeholder="Budget to invest">
+            <input id="budget" type="text" name="budget" placeholder="Budget to invest">
         </div>
 
         <div class="ui form">
@@ -103,7 +103,7 @@
         </div>
 
     </form>
-    <button class="btn-primary" type="submit">Submit</button>
+    <button id="btn" class="btn-primary" type="submit">Submit</button>
     </form>
 </div>
 
