Can now add a house - corrected

--- a/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
@@ -29,10 +29,10 @@
         </div>
         <div class="field">
             <label>Type</label>
-            <select id="type" class="ui fluid dropdown">
+            <select id="houseType" class="ui fluid dropdown">
                 <option value="">Type</option>
-                <option value="AP">Apartment</option>
-                <option value="HS">House</option>
+                <option value="apartment">Apartment</option>
+                <option value="house">House</option>
             </select>
         </div>
 
