--- a/hackathon/src/main/webapp/WEB-INF/templates/companies-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/companies-view.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <script
+            src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src="semantic/dist/semantic.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script type="text/javascript" src="companies.js"></script>
+
+    <title>Companies list</title>
 </head>
 <body>
-$END$
+
+<div class="text-center" style="padding-top: 40px">
+    <h1><b>Companies</b></h1>
+</div>
+
+<div class="container">
+
+    <div>
+        <table id="companies-table" class="table table-striped" style="background-color:whitesmoke">
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>See details</th>
+            </tr>
+        </table>
+    </div>
+</div>
+
 </body>
 </html>
