--- a/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
@@ -55,46 +55,46 @@
 
         <div class="ui form">
             <div class="inline fields">
-                <label>Services Needed</label>
+                <label id="work" >Services Needed</label>
                 <div class="field">
                     <div class="ui radio checkbox">
-                        <input type="checkbox">
+                        <input value="5" type="checkbox">
                         <label>Carpentry</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
-                        <input type="checkbox">
+                        <input value="6" type="checkbox">
                         <label>Decoration</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
-                        <input type="checkbox">
+                        <input value="7" type="checkbox">
                         <label>Rebuild</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
-                        <input type="checkbox">
+                        <input value="8" type="checkbox">
                         <label>Electric</label>
                     </div>
                 </div>
 
                 <div class="field">
                     <div class="ui radio checkbox">
-                        <input type="checkbox">
+                        <input value="4" type="checkbox">
                         <label>Plumbing</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui radio checkbox">
-                        <input type="checkbox">
+                        <input value="9" type="checkbox">
                         <label>Cleaning</label>
                     </div>
                     <div class="field">
                         <div class="ui radio checkbox">
-                            <input type="checkbox">
+                            <input value="10" type="checkbox">
                             <label>Locksmith</label>
                         </div>
                     </div>
