add more Beautiful things to the view

--- a/hackathon/src/main/webapp/WEB-INF/templates/add-user.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/add-user.html
@@ -17,36 +17,43 @@
 <div class="bg">
 
 
-<div class="container">
-    <div class="rect">
-        <div class="loginho">
-        <img src="./logoMIN.png" class="rounded mx-auto d-block" alt="...">
+    <div class="container">
+        <div class="rect">
+            <div class="loginho">
+                <img src="./logoMIN.png" class="rounded mx-auto d-block" alt="...">
+            </div>
+            <div class="text-form">
+                <div class="text-center" style="padding-top: 40px">
+                    <h2 style="color: gray"><b>Register</b></h2>
+                </div>
+                <br>
+
+                <form class="ui form">
+                    <div class="field">
+                        <label>Name</label>
+                        <input id="name" type="text" name="name" placeholder="Name">
+                    </div>
+                    <div class="field">
+                        <label>E-mail</label>
+                        <input id="email" type="text" name="email" placeholder="Email">
+                    </div>
+                    <div class="field">
+                        <label>Phone</label>
+                        <input id="phone" type="text" name="phone" placeholder="Phone">
+                    </div>
+
+                    <br>
+                    <div class="buttonZITO">
+                        <input class="btn-success" type="reset"
+                               style="background-color: #f48d8a; border-color: #f48d8a" type="Reset">
+                        <button id="btn" class="btn-success" type="submit"
+                                style="background-color: #86cfc6; border-color: #86cfc6">Submit
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-        <div class="text-form">
-            <div class="text-center" style="padding-top: 40px">
-            <h2 style="color: gray"><b>Register</b></h2>
-        </div><br>
-
-    <form class="ui form">
-        <div class="field">
-            <label>Name</label>
-            <input id="name" type="text" name="name" placeholder="Name">
-        </div>
-        <div class="field">
-            <label>E-mail</label>
-            <input id="email" type="text" name="email" placeholder="Email">
-        </div>
-        <div class="field">
-            <label>Phone</label>
-            <input id="phone" type="text" name="phone" placeholder="Phone">
-        </div>
-    </form>
-    <br>
-    <button id="btn" class="btn-success" type="submit" style="background-color: #86cfc6; border-color: #86cfc6">Submit</button>
-
-    </form></div>
-</div>
-</div>
 </div>
 </body>
 </html>
