view companies, start

--- a/hackathon/src/main/webapp/WEB-INF/templates/companies-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/companies-view.html
@@ -14,11 +14,18 @@
 </head>
 <body>
 
-<div class="text-center" style="padding-top: 40px">
-    <h1><b>Companies</b></h1>
-</div>
+<div class="bg">
 
-<div class="container">
+
+    <div class="container">
+        <div class="rect">
+            <div class="loginho">
+                <img src="./logoMIN.png" class="rounded mx-auto d-block" alt="...">
+            </div>
+            <div class="text-form">
+                <div class="text-center" style="padding-top: 10px">
+                    <h2 style="color: gray">Services</h2>
+                </div><br>
 
     <div>
         <table id="companies-table" class="table table-striped" style="background-color:whitesmoke">
