--- a/hackathon/src/main/webapp/WEB-INF/templates/add-user.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/add-user.html
@@ -31,6 +31,11 @@
             <label>Phone</label>
             <input id="phone" type="text" name="phone" placeholder="Phone">
         </div>
+
+        <div class="password">
+            <label>Password</label>
+            <input id="password" type="password" name="password">
+        </div>
     </form>
     <button id="btn" class="btn-success" type="submit">Submit</button>
     </form>
