finish the views

--- a/hackathon/src/main/webapp/WEB-INF/templates/companies-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/companies-view.html
@@ -11,11 +11,14 @@
     <script type="text/javascript" src="companies.js"></script>
 
 
-    <link rel="stylesheet" type="text/css" href="./add-user.css">
+    <link rel="stylesheet" type="text/css" href="./companies-view.css">
 </head>
 <body>
 
 <div class="bg">
+
+
+
     <div class="container">
         <div class="rect">
             <div class="loginho">
@@ -38,7 +41,8 @@
                     </table>
                 </div>
             </div>
-
+        </div>
     </div>
+</div>
 </body>
 </html>
