solved register user problem

--- a/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
@@ -16,7 +16,6 @@
 
 <div class="bg">
 
-
     <div class="container">
         <div class="rect">
             <div class="loginho">
@@ -109,7 +108,7 @@
 
                     <input class="btn-success" type="reset"
                            style="background-color: #f48d8a; border-color: #f48d8a" type="Reset">
-                <button id="btn" class="btn-success" type="submit"
+                <button id="btn" class="btn-success"
                         style="background-color: #86cfc6; border-color: #86cfc6">Submit</button>
 
 
