--- a/hackathon/src/main/webapp/WEB-INF/templates/add-user.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/add-user.html
@@ -41,12 +41,15 @@
                         <label>Phone</label>
                         <input id="phone" type="text" name="phone" placeholder="Phone">
                     </div>
-
+                    <div class="password-field">
+                        <label>Password</label>
+                        <input id="password" type="password" name="password" placeholder="Password">
+                    </div>
                     <br>
                     <div class="buttonZITO">
                         <input class="btn-success" type="reset"
                                style="background-color: #f48d8a; border-color: #f48d8a" type="Reset">
-                        <button id="btn" class="btn-success" type="submit"
+                        <button id="btn" class="btn-success"
                                 style="background-color: #86cfc6; border-color: #86cfc6">Submit
                         </button>
                     </div>
