solve add house problem

--- a/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
@@ -62,43 +62,43 @@
                             <label id="work"><b>Services Needed</b></label>
                             <div class="field">
                                 <div class="ui radio checkbox">
-                                    <input value="5" type="checkbox">
+                                    <input value="1" type="checkbox" id="carpentry">
                                     <label>Carpentry</label>
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="ui radio checkbox">
-                                    <input value="6" type="checkbox">
+                                    <input value="2" type="checkbox" id="decoration">
                                     <label>Decoration</label>
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="ui radio checkbox">
-                                    <input value="7" type="checkbox">
+                                    <input value="3" type="checkbox" id="rebuild">
                                     <label>Rebuild</label>
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="ui radio checkbox">
-                                    <input value="8" type="checkbox">
-                                    <label>Electric</label>
+                                    <input value="4" type="checkbox" id="plumbing">
+                                    <label>Plumbing</label>
                                 </div>
                             </div>
 
                             <div class="field">
                                 <div class="ui radio checkbox">
-                                    <input value="4" type="checkbox">
-                                    <label>Plumbing</label>
+                                    <input value="5" type="checkbox" id="electrical">
+                                    <label>Electrical</label>
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="ui radio checkbox">
-                                    <input value="9" type="checkbox">
+                                    <input value="6" type="checkbox" id="cleaning">
                                     <label>Cleaning</label>
                                 </div>
                                 <div class="field">
                                     <div class="ui radio checkbox">
-                                        <input value="10" type="checkbox">
+                                        <input value="7" type="checkbox" id="locksmith">
                                         <label>Locksmith</label>
                                     </div>
                                 </div>
