--- a/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/house-view.html
@@ -108,7 +108,8 @@
                     </div>
 
                     <input class="btn-success" type="reset"
-                           style="background-color: #f48d8a; border-color: #f48d8a" type="Reset">
+                           style="background-color: #f48d8a; border-color: #f48d8a" type="Reset"/>
+
                 <button id="btn" class="btn-success" type="submit"
                         style="background-color: #86cfc6; border-color: #86cfc6">Submit</button>
 
