--- a/hackathon/src/main/webapp/WEB-INF/templates/login.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/login.html
@@ -27,33 +27,34 @@
                     <h2 style="color: gray"><b>Login</b></h2>
                 </div>
                 <br>
-<div class="wrapper fadeInDown">
-    <div id="formContent">
-        <!-- Tabs Titles -->
+                <div class="wrapper fadeInDown">
+                    <div id="formContent">
+                        <!-- Tabs Titles -->
 
-        <!-- Icon -->
+                        <!-- Icon -->
 
 
-        <!-- Login Form -->
-        <form>
-            <input type="text" id="phone" class="fadeIn second" placeholder="login">
-            <input type="password" id="password" class="fadeIn third" placeholder="password"><br>
-            <br>
-            <div class="buttonZITO">
-                <input class="btn-success" type="reset"
-                       style="background-color: #f48d8a; border-color: #f48d8a" type="Reset">
-                <button id="btn" class="btn-success" type="submit"
-                        style="background-color: #86cfc6; border-color: #86cfc6">Submit
-                </button>
-        </form>
+                        <!-- Login Form -->
+                        <form>
+                            <input type="text" id="phone" class="fadeIn second" placeholder="login">
+                            <input type="password" id="password" class="fadeIn third" placeholder="password"><br>
+                            <br>
+                            <div class="buttonZITO">
+                                <input class="btn-success" type="reset"
+                                       style="background-color: #f48d8a; border-color: #f48d8a" type="Reset">
+                                <button id="btn" class="btn-success"
+                                        style="background-color: #86cfc6; border-color: #86cfc6">Submit
+                                </button>
+                            </div>
+                        </form>
 
-        <!-- Remind Passowrd -->
-        <div id="formFooter">
-            <a class="underlineHover" href="#">Forgot Password?</a>
-        </div>
+                        <!-- Remind Passowrd -->
+                        <div id="formFooter">
+                            <a class="underlineHover" href="#">Forgot Password?</a>
+                        </div>
 
-    </div>
-</div>
+                    </div>
+                </div>
 
 </body>
 </html>
