--- a/hackathon/src/main/webapp/WEB-INF/templates/homepage.html
+++ b/hackathon/src/main/webapp/WEB-INF/templates/homepage.html
@@ -19,8 +19,8 @@
 <div class="bg">
 
     <button style=" background-color: #86cfc6; border-color: #86cfc6; margin-left: 1180px; margin-top: 30px"
-            class="btn btn-primary" type="submit"><a href="http://localhost:8080/rrr/house/adduser" style="color: white">Register</a></button>
-    <button style="background-color: #abdbd1; border-color: #abdbd1; margin-top: 30px; margin-left: 15px" class="btn btn-primary" type="submit"><a href="http://localhost:8080/rrr/house/login" style="color: white">Login</a></button>
+            class="btn btn-primary" type="submit"><a href="http://localhost:8080/annacasa/house/adduser" style="color: white">Register</a></button>
+    <button style="background-color: #abdbd1; border-color: #abdbd1; margin-top: 30px; margin-left: 15px" class="btn btn-primary" type="submit"><a href="http://localhost:8080/annacasa/house/login" style="color: white">Login</a></button>
 
     <div class="rect">
         <br>
